# Indoor-Positioning-System

./: README.md  xgboost_model.json
Archive/: README.md
Archive/Data/: readme.md
Archive/Images/: 1st_floor_schema.drawio  308_schema.drawio  TOF_diagram.drawio  discovery_and_ranging_phases.drawio  dtwr.drawio  owr.drawio  readme.md  scenario1.drawio  scenario2.drawio  scenario3.drawio  scenario4.drawio  scenario5.drawio  state_diagram_anchor.drawio  state_diagram_tag.drawio  state_diagram_tag_v1.drawio  triangulation.drawio  twr.drawio
Archive/Journal/: Notes_collected_during_the_work_mainly_UWB.md  Notes_for_software.md  hardware.md  poznamky.md  readme.md  software.md  text1.txt  text2.txt
Archive/Papers/: README.md  readme.md
Data for Indoor Positioning System (GUI)/: README.md
Data for Video Player/: README.md
Data for analysis/: readme.md
Data for analysis/Data for comparison/: comparison_plots_for_each_dataset.py  comparison_plots_for_each_dataset_temp_.py  complete_data_preparation_plots_and_statistics.py  evaluation_of_distances_between_people.py  evaluation_of_estimated_positions.py  statistics_for_each_dataset.py
Data for evaluation/: readme.md
Data/Data for comparison/: comparison_plots_for_each_dataset copy.py  comparison_plots_for_each_dataset-temp.py  comparison_plots_for_each_dataset.py  scatter_plot_for_each_dataset-temp.py
Documentation/Main Documentation/: Abstrakt1.txt  Abstrakt2.txt
Experiments/: test_vzdalenosti(nejvetsi je 14m).txt
Experiments/Experiment 11.05.23/: analisys.py  analysis.py
Experiments/Experiment 11.18.23/: analisys.py
Experiments/Experiment 12.23.23 - 12.30.23/: Analysis.py
Experiments/Experiments (12) 2023.11.05/: analysis.py
Experiments/Experiments (13-14) 2023.11.18/: analisys.py
Experiments/Scenario 1/: readme.md  scenario_1.drawio
Experiments/Scenario 2/: readme.md  scenario_2.drawio
Experiments/Scenario 3/: readme.md  scenario_3.drawio
Experiments/Scenario 4/: readme.md  scenario_4.drawio
Experiments/Test for Video Player/: UWB_timestamps.txt
Experiments/Test for Video Player - Test 1/: UWB_timestamps.txt
Experiments/Test for Video Player - Test 2/: UWB_timestamps.txt
Experiments/Test for Video Player 2/: UWB_timestamps.txt
Hardware (ESP32)/: readme.md  tagArduinoOriginal.ino
Hardware (ESP32)/10.28.2022/: distance_visualization.cpp
Hardware (ESP32)/10.28.2022 v1/: distance_visualization  distance_visualization.cpp  output.txt  readme.md  test_1_vzdalenost.txt  test_2-vzdalenost3manchory.txt  test_2_2_m.txt
Hardware (ESP32)/10.28.2022 v2 (tag order management)/: distance_visualization  distance_visualization.cpp  output.txt  readme.md
Hardware (ESP32)/10.29.2022 v3 (decentralized, working)/: distance_visualization_req  distance_visualization_req.cpp  output.txt
Hardware (ESP32)/10.29.2022 v3 (test)/: readme.md
Hardware (ESP32)/10.29.2022 v4 (centralized)/: distance_visualization.cpp  distance_visualization_req  distance_visualization_req.cpp
Hardware (ESP32)/10.29.2022 v4 (test)/: distance_visualization_req
Hardware (ESP32)/11.12.2022 v5.1 (working, last, decentralized)/: distance_visualization.cpp  distance_visualization_req.cpp  output.txt
Hardware (ESP32)/11.17.2022 v6 (working, centralized)/: distance_visualization_req  distance_visualization_req.cpp  experiment-2-tagy-2-12-22.txt  tagArduino-working-24-11-22.ino
Hardware (ESP32)/11.8.2022 (own implementation)/: distance_visualization_req  readme.md
Hardware (ESP32)/12.12.2022 v5.1 (working, last, decentralized)/: distance_visualization_req
Hardware (ESP32)/12.7.2022 v6.1 (centralized, python)/: CMakeLists.txt  Server.cpp  Server.hpp  server_multithreaded.py
Hardware (ESP32)/17.12.2022 v6 (working, centralized)/: distance_visualization_req  distance_visualization_req.cpp  output.txt  server.cpp  test_distnace.txt
Hardware (ESP32)/Data Analysis/: UWB_timestamps.txt  analysis.ipynb  analysis.py
Hardware (ESP32)/New version test/Data reader/: CMakeLists.txt  data_reader.cpp  data_reader.hpp
Hardware (ESP32)/New version test/Data reader/data/Experiment 3.1 - Anchor 101, Tag 1/: timestamp_ESP32.txt
Hardware (ESP32)/New version test/aruco/: 30_09_23_1m-9m_with_aruco.txt  CMakeLists.txt  aruco.cpp  aruco_video_detected_ids.txt  aruco_video_timestamps.txt  temp.txt  video_from_left_camera.avi
Implementation/: README.md
PixelToReal, Optical and UWB evaluation/: README.md
Recorded Experiments/: README.md
Software (Image processing)/: CMakeLists - to make dedicated application.txt  chessboard_pattern_gen.cpp  chessboard_pattern_gen.py  readme.md
Software (Image processing)/c++/IndoorPositioningSystem/: CMakeLists.txt  anchorinputwindow.h  chartlayout.h  coordinateswindow.h  customchartview.cpp  customchartview.h  customgraphicitems.cpp  customgraphicitems.h  custominputdialog.h  customlabel.h  customvboxlayout.h  dataanalysiswindow.cpp  dataprocessor.cpp  dataprocessor.h  exporttimerangesetter.cpp  exporttimerangesetter.h  indoorpositioningsystemui.cpp  indoorpositioningsystemui.h  indoorpositioningsystemui.ui  indoorpositioningsystemviewmodel.cpp  indoorpositioningsystemviewmodel.h  structures.h  threadsafequeue.h  videoprocessor.cpp
Software (Image processing)/c++/calibration/: CMakeCache.txt  CMakeLists.txt  CameraThreaded.cpp  CameraThreaded.hpp  Disparity.cpp  Disparity.h  Disparity.hpp  HumanDetector.cpp  HumanDetector.hpp  Makefile  StereoCalibration  StereoCalibrator.cpp  StereoCalibrator.h  StereoCalibrator.hpp  StereoCalibratorThreaded.cpp  StereoCalibratorThreaded.h  StereoCalibratorThreaded.hpp  StereoCamera.cpp  StereoCamera.h  StereoCamera.hpp  VideoManager.cpp  VideoManager.hpp  camera_settings.py  cmake_install.cmake  main.cpp
Software (Image processing)/c++/calibration/People Detection/: CMakeLists.txt  StereoCamera.cpp  StereoCamera.h  human_detection.cpp
Software (Image processing)/c++/offline/: CMakeLists.txt  Disparity.cpp  Disparity.hpp  HumanDetector.cpp  HumanDetector.hpp  VideoManager.cpp  VideoManager.hpp  main.cpp
TODO/: software.md
(+511 files in other folders)
